# hichi.ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/: floor_plans.py  furniture.py  reconstruction.py
app/core/: config.py
app/inference/: device.py  floor_plan.py  floor_plan_vision.py  furniture.py  reconstruction.py
app/jobs/: __init__.py  queue.py  reconstruction.py
notebooks/: 01_furniture_yolo_baseline.ipynb  02_floor_plan_opencv.ipynb
scripts/: check_env.py  download_weights.py
tests/: test_health.py
